implemented all services and config classes (#2)
* implemented all services and config classes
* added delete functionality to TraineeService
* used BOM for managing dependency versions
* updated pom.xml